Wrap fix

--- a/css/custom.css
+++ b/css/custom.css
@@ -138,6 +138,7 @@ display: block;
 @media (min-width: 750px) {
 #wc {
 	display: inline;
+  white-space: nowrap;
 }
 }
 
